# live-translator

./: README.md  pyproject.toml
src/live_translator/: __init__.py
