[project]
name = "live-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "arthurdorigueto", email = "arthurdorigueto@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
live-translator = "live_translator:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
